# Camera-OpenCV

./: .gitignore  main.py  pyproject.toml
camera_using_opencv/: main.py
utils/: utils_camera.py  utils_control.py  utils_face_detection.py  utils_video.py
utils/camera_using_opencv.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
